# Awesome-CloudOps-Automation

./: .gitignore  .pylintrc  DockerReleaseNotes.md  README.md  README_extending_docker.md  README_template.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  _config.yml  all_modules_test.py  awsListIAMUsers.tgz  dead-links.py  docker_release.yml  generate_readme.ipynb  generate_readme.nbconvert.ipynb  models  newTask.txt  prom  pylint.log-with-module  pytype.toml  read_bson.py  region_test.py  region_testing.py  replace-string.py  replace_string.py  sanitize.py  spotify.ipynb  t.py  temp  temp.py  temp2  unskript-client.py  unskript_ctl_config.yaml  unskript_ctl_core.py  validator.py  wrong_region.py  xrunbooks-directory.md
.github/: Anatomy-of-Runbook.md  CONTRIBUTING.md  DEVELOPERGUIDE.md  code-of-conduct.md  guidelines-to-creating-runbook.md  hfest_2022_resource.md  pull_request_template.md
.ipynb_checkpoints/: README.md  generate_readme-checkpoint.ipynb  spotify-checkpoint.ipynb
.pytype/: build.ninja
.trunk/: trunk.yaml
AWS/: AWS_Access_Key_Rotation.ipynb  AWS_Access_Key_Rotation.json  AWS_Add_Lifecycle_Policy_To_S3_Buckets.ipynb  AWS_Add_Lifecycle_Policy_To_S3_Buckets.json  AWS_Add_Mandatory_tags_to EC2.ipynb  AWS_Add_Mandatory_tags_to EC2.json  AWS_Add_Mandatory_tags_to_EC2.ipynb  AWS_Add_Mandatory_tags_to_EC2.json  AWS_Add_Tag_Across_Selected_AWS_Resources.ipynb  AWS_Add_Tag_Across_Selected_AWS_Resources.json  AWS_Bulk_Update_Resource_Tag.ipynb  AWS_Bulk_Update_Resource_Tag.json  AWS_Change_Route53_TTL.ipynb  (+223 more)
api/fastapi-unctl-env/: pyproject.toml
(+2721 files in other folders)
